- nano.c:
  version()
	- Remove obsolete reference to --enable-undo. (David Benbennick)
  do_int_speller()
	- Make internal spell program use sort -f and uniq to create a less
	  redundant word list.  [The only reason this is going in during 
	  feature freeze is because the int speller is useless as is and should
	  either be improved or removed.  I chose improved].
- winio.c:
  do_credits()
	- Add David Benbennick to credits. (DLR)
- nanorc.sample:
	- Added comment to explain the non-escaping of quotes in
	  color regexes, based on info provided by David Benbennick.
	  (DLR)
- faq.html:
	- Miscellaneous fixes and updates for typos and broken links.
	  It is now fully compliant with HTML 4.01 Transitional. (DLR)
- nano.texi:
	- Typo fixes and updates. (David Benbennick)
- THANKS:
	- Added Doruk Fisek (Jordi).

GNU nano 1.1.12 - 10/24/2002
- General:
	- Translation updates (see po/ChangeLog for details).
	- Remove malloc.h, as it's unneeded and just causes annoyances on
	  *BSD systems.  Added stdlib.h to global.c.
	- Added Meta-Y toggle to disable/enable color syntax highlighting
	  completely.  This may eventually be per-buffer, but that's too
	  complicated for a feature freeze.
	- Disable VSTOP keystroke.  Stops people accidentally locking up
	  nano (suggested by David Benbennick).
	- Pluralize messages with ngettext() where needed. (David
	  Benbennick)  Tweaked to compile on systems lacking ngettext()
	  by DLR (problem found by Ken Tyler).
	- Update nano.1 and nano.1.html to show that nano now does an
	  emergency save on receiving SIGHUP or SIGTERM. (DLR)
	- Don't include "nowrap" in the long options if
	  DISABLE_WRAPPING is defined. (DLR)
- files.c:
  read_file()
	- Minor efficiency fixes, some of which fit in with the change
	  to ngettext() usage mentioned above. (David Benbennick)
  do_browser()
	- Make sure the value of path is mallocstrcpy()ed into retval
	  and not just assigned to it, to avoid memory corruption
	  problems. (DLR)
- nano.c: